# cats-tracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: YOLOv11.cpp
